--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <th>Turno</th>
       </tr>
       <tr>
-        <td>Jose</td>
+        <td>Jose Manuel Dos Santos</td>
         <td>+244 980000000</td>
-        <td>nekkkkkd@gmail.com</td>
+        <td>josemanuel202@gmail.com</td>
         <td>Contabilidade</td>
         <td>Manhã</td>
       </tr>
       
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Domingos Francisco</td>
+        <td>+244 953224490</td>
+        <td>domingosfranidom@gmail.com</td>
+        <td>Eventos</td>
+        <td>Tarde</td>
       </tr>
       <tr>
         <td></td>
